<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/image">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="-73dp"
        tools:layout_editor_absoluteY="25dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="showPopup"
                android:text="Show Popup"
                tools:ignore="HardcodedText,OnClick,UsingOnClickInXml" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <Button
                    android:id="@+id/long_press"
                    android:layout_width="137dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:text="@string/long_press"
                    tools:ignore="HardcodedText,OnClick,RtlHardcoded,UsingOnClickInXml" />

            </LinearLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessParent">

            <ToggleButton
                android:id="@+id/toggleButton1"
                android:layout_width="135dp"
                android:layout_height="match_parent"
                tools:ignore="TextContrastCheck,TextContrastCheck" />

            <Button
                android:id="@+id/btnDisplay"
                android:layout_width="142dp"
                android:layout_height="match_parent"
                android:text="@string/btn_display"
                tools:ignore="DuplicateIds,DuplicateSpeakableTextCheck" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf,UselessParent">

            <EditText
                android:id="@+id/edittext"
                android:layout_width="273dp"
                android:layout_height="wrap_content"


                android:inputType="text"
                android:minHeight="48dp"
                tools:ignore="Autofill,LabelFor,SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/button"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:text="@string/button"
                tools:ignore="DuplicateIds,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf,UselessParent">

            <AutoCompleteTextView
                android:id="@+id/ac_text_view"
                android:layout_width="273dp"
                android:layout_height="48dp"
                android:hint="Search"
                android:padding="9dp"
                tools:ignore="HardcodedText,TextContrastCheck,TextContrastCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/ac_button"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:text="@string/ac_button"
                tools:ignore="DuplicateIds,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf,UselessParent">

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="274dp"
                android:layout_height="match_parent"
                tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />

            <Button
                android:id="@+id/spinner_button"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:text="@string/spinner_button"
                tools:ignore="DuplicateIds,TouchTargetSizeCheck,TouchTargetSizeCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf,UselessParent">

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="275dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/radio_on"
                    android:layout_width="131dp"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="On"
                    tools:ignore="HardcodedText,OnClick,UsingOnClickInXml" />

                <RadioButton
                    android:id="@+id/radio_off"
                    android:layout_width="142dp"
                    android:layout_height="wrap_content"
                    android:text="Off"
                    android:textColor="#616161"
                    tools:ignore="HardcodedText,OnClick,UsingOnClickInXml,TextContrastCheck,TextContrastCheck,TextContrastCheck" />
            </RadioGroup>

            <Button
                android:id="@+id/rb_button"
                android:layout_width="113dp"
                android:layout_height="wrap_content"
                android:text="@string/rb_button"
                tools:ignore="DuplicateIds,TouchTargetSizeCheck,TouchTargetSizeCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            tools:ignore="UselessLeaf,UselessParent">

            <Button
                android:id="@+id/beep_button"
                android:layout_width="112dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="2dp"
                android:text="Som"
                android:onClick="playSound"
                tools:ignore="HardcodedText,RtlHardcoded,UsingOnClickInXml" />

        </LinearLayout>
        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".MainActivity"
            tools:ignore="RedundantNamespace">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:ignore="UselessLeaf,UselessParent">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:hint="@string/select"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu">

                    <AutoCompleteTextView
                        android:id="@+id/auto_complete_txt"
                        android:layout_width="276dp"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        tools:ignore="TextContrastCheck" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>

        </androidx.coordinatorlayout.widget.CoordinatorLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>